--- a/src/public/css/commom.css
+++ b/src/public/css/commom.css
@@ -1,5 +1,5 @@
-.header {
-  background: #000;
+.homepage {
+  background: #ddd;
 }
 
 .header__inner {
@@ -8,38 +8,107 @@
   max-width: 1230px;
 }
 
-.header-utilities {
+.menu-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
   display: flex;
+  height: 60px;
+  width: 60px;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
+  z-index: 90;
+  background-color: blue;
+}
+
+.menu-btn span,
+.menu-btn span:before,
+.menu-btn span:after {
+  content: '';
+  display: block;
+  height: 3px;
+  width: 25px;
+  border-radius: 3px;
+  background-color: #ffffff;
+  position: absolute;
+}
+
+.menu-btn span:before {
+  bottom: 4px;
+}
+
+.menu-btn span:after {
+  top: 3px;
+}
+
+#menu-btn-check:checked~.menu-btn span {
+  background-color: rgba(255, 255, 255, 0);
+  /*メニューオープン時は真ん中の線を透明にする*/
+}
+
+#menu-btn-check:checked~.menu-btn span::before {
+  bottom: 0;
+  transform: rotate(45deg);
+}
+
+#menu-btn-check:checked~.menu-btn span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+
+#menu-btn-check {
+  display: none;
+}
+
+.menu-content {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  z-index: 80;
+  transition: all 0.5s;
+}
+
+#menu-btn-check:checked~.menu-content {
+  left: 0;
+  /*メニューを画面内へ*/
+}
+
+.menu-content ul {
+  padding: 70px 10px 0;
+}
+
+.menu-content ul li {
+  list-style: none;
+}
+
+.menu-content ul li a {
+  display: block;
+  width: 100%;
+  font-size: 15px;
+  box-sizing: border-box;
+  color: blue;
+  text-decoration: none;
+  padding: 9px 15px 10px 0;
+  position: relative;
+}
+
+.menu-content ul li a::before {
+  content: "";
+  width: 7px;
+  height: 7px;
+  border-top: solid 2px #ffffff;
+  border-right: solid 2px #ffffff;
+  transform: rotate(45deg);
+  position: absolute;
+  right: 11px;
+  top: 16px;
 }
 
 .header__logo {
-  color: #fff;
+  color: blue;
   text-decoration: none;
   font-weight: bold;
   font-size: 24px;
-}
-
-.header-utilities nav {
-  width: 18%;
-}
-
-.header-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header-nav__link {
-  color: #fff;
-  text-decoration: none;
-}
-
-.header-nav__button {
-  border: none;
-  background: transparent;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
 }
