--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -1,27 +1,53 @@
-.register-form__content {
+.register__card {
   margin: 0 auto;
   padding: 30px 15px;
+  width: 500px;
+  height: 350px;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 5px 5px 3px #a9a9a9;
+  cursor: pointer;
   max-width: 1230px;
 }
 
-.register-form__heading {
-  margin-bottom: 20px;
-  text-align: center;
+.register__header {
+  margin: 0 auto;
+  margin-top: -55px;
+  margin-left: -15px;
+  width: 500px;
+  height: 80px;
+  background-color: blue;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
+
+.register__header-title {
+  padding: 20px 20px;
+  font-size: 25px;
+  color: #fff;
+}
+
+.register__inner {
+  padding: 20px 10px;
+  margin: 0 auto;
 }
 
 .form {
   margin: 0 auto;
   width: 25%;
-  text-align: center;
+  text-align: left;
 }
 
 .form__group {
   margin-bottom: 5px;
 }
 
-.form__group-title {
+.form__group-icon {
   text-align: left;
+  margin-top: 5px;
+  margin-left: -40px;
 }
+
 
 .form__error {
   height: 20px;
@@ -29,32 +55,31 @@
   text-align: left;
 }
 
+.form__input--text {
+  margin-top: -20px;
+}
+
 .form__input--text input {
   padding: 10px;
-  width: 100%;
-  height: 40px;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-
-  appearance: none;
+  width: 200px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #000;
 }
 
 .form__button {
-  margin-top: 20px;
+  margin-left: 200px;
+  margin-bottom: 40px;
 }
 
 .form__button-submit {
-  padding: 10px;
-  width: 30%;
-  height: 50px;
+  padding: 10px 10px;
+  width: 50px;
+  height: 40px;
   border: none;
   border-radius: 3px;
-  background: #000;
+  background: blue;
   color: #fff;
   cursor: pointer;
-}
-
-.login__link {
-  margin-top: 20px;
-  text-align: center;
 }
