--- a/src/public/css/common1.css
+++ b/src/public/css/common1.css
@@ -109,6 +109,12 @@
   top: 16px;
 }
 
+.header__title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .header__logo {
   color: blue;
   text-decoration: none;
