--- a/src/public/css/common1.css
+++ b/src/public/css/common1.css
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   z-index: 90;
-  background-color: blue;
+  background-color:#4169e1 ;
 }
 
 .menu-btn span,
@@ -90,7 +90,7 @@
   width: 100%;
   font-size: 15px;
   box-sizing: border-box;
-  color: blue;
+  color: #4169e1;
   font-weight: bold;
   text-decoration: none;
   padding: 9px 15px 10px 0;
@@ -116,7 +116,7 @@
 }
 
 .header__logo {
-  color: blue;
+  color: #4169e1;
   text-decoration: none;
   font-weight: bold;
   font-size: 24px;
