--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -16,7 +16,7 @@
   margin-left: -15px;
   width: 500px;
   height: 80px;
-  background-color: blue;
+  background-color: #4169e1;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
@@ -98,7 +98,7 @@ img.icon150010_256.png {
   height: 40px;
   border: none;
   border-radius: 3px;
-  background: blue;
+  background: #4169e1;
   color: #fff;
   cursor: pointer;
 }
