--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -141,10 +141,34 @@
   cursor: pointer;
 }
 
-.fa-regular fa-heart {
-  width: 20px;
-  height: 20px;
-  background-image: url('./img/heart-regular.svg');
-  background-repeat: no-repeat;
-  content: '';
+@keyframes heartAnimation {
+  0% {
+    transform: scale(0.5);
+  }
+
+  10% {
+    transform: scale(0.7);
+  }
+
+  30% {
+    transform: scale(0.9);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  80% {
+    transform: scale(1.5);
+  }
+
+  100% {
+    transform: scale(1.0);
+  }
+}
+
+.heart-fa-heart.heart {
+  font-size: 30px;
+  animation: heartAnimation .2s;
+  color: #e2264d;
 }
