--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -136,7 +136,16 @@ img {
 
 .reserve__button {
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 20px;
   border: none;
+  background: transparent;
   color: #fff;
+  overflow: hidden;
+}
+
+.return__button::backdrop {
+  background-color: transparent;
 }
