--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -115,6 +115,12 @@ img {
   height: 20px;
 }
 
+.text-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .title,
 .shop_name,
 .reserve_date,
